# glovebox

./: .gitignore  AUTHORS  CMakeLists.txt  README
GpsService/: CMakeLists.txt  GpsListener.cpp  GpsListener.h  GpsService.cpp  GpsService.h
Launchpad/: CMakeLists.txt
Launchpad/lib/: CMakeLists.txt
Launchpad/lib/launchpad/: CMakeLists.txt  Launchpad.h  Page.cpp  Page.h  launchpad_export.h  version.h
Launchpad/pages/cluster/: CMakeLists.txt  cluster.cpp  cluster.h  launchpad-page-cluster.desktop
Launchpad/src/: CMakeLists.txt  InvalidService.h  Launcher.cpp  Launcher.h  Launchpad.cpp  Launchpad.h  LaunchpadApp.cpp  LaunchpadApp.h  LaunchpadPage.cpp  LaunchpadPage.h  LaunchpadPlugin.h  LaunchpadPluginManager.cpp  LaunchpadPluginManager.h  LaunchpadService.cpp  LaunchpadService.h  Page.cpp  Page.h  PageListDelegate.cpp  PageListDelegate.h  PageListModel.cpp  PageListModel.h  PageManager.cpp  PageManager.h  PageModel.cpp  PageModel.h  PluginManager.cpp  PluginManager.h  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  Splash.cpp  Splash.h  config.h  config.h.cmake  main.cpp  splash.qrc
Launchpad/src/BasicPlugins/: CMakeLists.txt  ClockPage.cpp  ClockPage.h  ClockWidget.cpp  ClockWidget.h  DashWidget.cpp  DashWidget.h  DateWidget.cpp  DateWidget.h  HomePage.cpp  HomePage.h  SettingsPage.cpp  SettingsPage.h  TimeService.cpp  TimeService.h  WidgetHandle.h
Launchpad/src/HomePage/: CMakeLists.txt  HomePage.cpp  HomePage.h
MapPage/: CMakeLists.txt  CompassWidget.cpp  CompassWidget.h  MapPage.cpp  MapPage.h  SignalWidget.cpp  SignalWidget.h
MediaPlayer/: CMakeLists.txt  MediaPage.cpp  MediaPage.h  MediaService.cpp  MediaService.h
NetworkStatus/: CMakeLists.txt  NetworkService.cpp  NetworkService.h
gloveui/: CMakeLists.txt  GIcon.cpp  GIcon.h  GIconLoader.cpp  GIconLoader.h  GNotify.cpp  GNotify.h  GSoundLoader.cpp  GSoundLoader.h  GStandardDirs.cpp  GStandardDirs.h  Glovebox.h  config.h.cmake
src/: src.pro
src/GPSService/: GPSService.h  GPSService.pro  main.cpp
src/HomePage/: HomePage.cpp  HomePage.h  HomePage.pro
src/Launchpad/: Launchpad  Launchpad.cpp  Launchpad.h  Launchpad.pro  LaunchpadPlugin.h  LaunchpadService.cpp  LaunchpadService.h  PluginManager.cpp  ServiceManager.cpp  Splash.cpp  Splash.h  main.cpp  splash.qrc
src/TestPage/: TestPage.cpp  TestPage.h  TestPage.pro
